[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://wall_mesh_library.tres" type="MeshLibrary" id=2]
[ext_resource path="res://player_arrow.png" type="Texture" id=3]
[ext_resource path="res://crosshairs.png" type="Texture" id=4]
[ext_resource path="res://crosshairs.gd" type="Script" id=5]
[ext_resource path="res://details_mesh_library.tres" type="MeshLibrary" id=6]
[ext_resource path="res://ceiling_mesh_library.tres" type="MeshLibrary" id=7]

[node name="Control" type="Control"]
anchor_right = 0.838
anchor_bottom = 0.953
margin_left = -1.05945
margin_right = -1.17145
margin_bottom = 0.200012
rect_min_size = Vector2( 858, 572 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_view" type="ViewportContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 542.0
margin_bottom = 542.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="firstperson_viewport" type="Viewport" parent="main_view"]
size = Vector2( 256, 256 )
handle_input_locally = false
render_target_update_mode = 3

[node name="firstperson_pos" type="Spatial" parent="main_view/firstperson_viewport"]

[node name="firstperson_camera" type="Camera" parent="main_view/firstperson_viewport/firstperson_pos"]
current = true
fov = 100.0

[node name="front_ray" type="RayCast" parent="main_view/firstperson_viewport/firstperson_pos"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true

[node name="left_ray" type="RayCast" parent="main_view/firstperson_viewport/firstperson_pos"]
enabled = true
cast_to = Vector3( -2, 0, 0 )
collide_with_areas = true

[node name="right_ray" type="RayCast" parent="main_view/firstperson_viewport/firstperson_pos"]
enabled = true
cast_to = Vector3( 2, 0, 0 )
collide_with_areas = true

[node name="back_ray" type="RayCast" parent="main_view/firstperson_viewport/firstperson_pos"]
enabled = true
cast_to = Vector3( 0, 0, 2 )
collide_with_areas = true

[node name="crosshairs" type="Sprite" parent="main_view"]
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="side_view" type="ViewportContainer" parent="."]
margin_left = 572.0
margin_top = 30.0
margin_right = 828.0
margin_bottom = 286.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overhead_viewport" type="Viewport" parent="side_view"]
size = Vector2( 256, 256 )
handle_input_locally = false
render_target_update_mode = 3

[node name="overhead_pos" type="Spatial" parent="side_view/overhead_viewport"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 8, 0 )

[node name="overhead_camera" type="Camera" parent="side_view/overhead_viewport/overhead_pos"]
cull_mask = 1048573
near = 0.01
far = 10.0

[node name="player_sprite" type="Sprite" parent="side_view"]
texture = ExtResource( 3 )

[node name="button_container" type="Control" parent="."]
margin_left = 572.0
margin_top = 316.0
margin_right = 839.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turn_left" type="Button" parent="button_container"]
margin_right = 85.0
margin_bottom = 20.0
action_mode = 0
text = "Turn Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_up" type="Button" parent="button_container"]
margin_left = 90.0
margin_right = 175.0
margin_bottom = 20.0
action_mode = 0
text = "Move Up"

[node name="turn_right" type="Button" parent="button_container"]
margin_left = 180.0
margin_right = 265.0
margin_bottom = 20.0
action_mode = 0
text = "Turn Right"

[node name="move_left" type="Button" parent="button_container"]
margin_top = 30.0
margin_right = 85.0
margin_bottom = 50.0
action_mode = 0
text = "Move Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_back" type="Button" parent="button_container"]
margin_left = 90.0
margin_top = 30.0
margin_right = 175.0
margin_bottom = 50.0
action_mode = 0
text = "Move Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_right" type="Button" parent="button_container"]
margin_left = 180.0
margin_top = 30.0
margin_right = 265.0
margin_bottom = 50.0
action_mode = 0
text = "Move Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walls" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 1 )
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 9, 0, 536870912, 65530, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 9, 1, 0, 65530, 1, 0, 0, 2, 0, 1, 2, 0, 9, 2, 536870912, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 1, 3, -1609564160, 2, 3, 0, 8, 3, 536870912, 2, 4, 537919488, 3, 4, 1048576, 7, 4, 536870912, 3, 5, 537919488, 4, 5, 0, 5, 5, 0, 6, 5, 537919488, 0, 65528, -1073741824, 65530, 65528, 0, 65531, 65528, 0, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 65535, 65528, 0, 0, 65529, 0, 65530, 65529, 0, 0, 65530, 0, 65530, 65530, 0, 65532, 65530, 0, 65533, 65530, 0, 65534, 65530, 0, 0, 65531, 0, 65530, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 0, 65532, 0, 65530, 65532, 0, 65533, 65532, 0, 0, 65533, 0, 3, 65533, 537919488, 4, 65533, 0, 5, 65533, 0, 6, 65533, 536870912, 65530, 65533, 0, 65531, 65533, 0, 65533, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 2, 65534, 537919488, 3, 65534, 0, 7, 65534, 536870912, 65530, 65534, 0, 65533, 65534, 0, 0, 65535, 0, 1, 65535, -1072693248, 2, 65535, 0, 8, 65535, 536870912, 65530, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 537919488 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="details" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 1 )
mesh_library = ExtResource( 6 )
data = {
"cells": PoolIntArray( 0, 0, 537526272, 65533, 0, 538312704, 65533, 2, 537919488, 0, 65532, 537526272, 65530, 65532, 536870912, 65533, 65532, 537526272, 65533, 65533, 536870912, 0, 65534, 537526272, 65530, 65534, 536870912, 65533, 65534, -1073086464 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="floor" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="ceiling" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
mesh_library = ExtResource( 7 )
collision_layer = 2
collision_mask = 2
data = {
"cells": PoolIntArray( 65535, 65532, 536870912, 65535, 65534, 0 )
}
__meta__ = {
"_editor_clip_": 0
}
[connection signal="pressed" from="button_container/turn_left" to="." method="_on_turn_left_pressed"]
[connection signal="pressed" from="button_container/move_up" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="button_container/turn_right" to="." method="_on_turn_right_pressed"]
[connection signal="pressed" from="button_container/move_left" to="." method="_on_move_left_pressed"]
[connection signal="pressed" from="button_container/move_back" to="." method="_on_move_back_pressed"]
[connection signal="pressed" from="button_container/move_right" to="." method="_on_move_right_pressed"]
